--- a/index.html
+++ b/index.html
@@ -9,6 +9,47 @@
     <link rel="shortcut icon" href="LINK DO FAVICON" type="image/x-icon">
 </head>
 <body>
-    info
+    <div class="mainPage">
+        <header>
+            <img src="#" alt="">
+            <nav>
+                <ul>
+                    <li><a href="#"><Home/a></li>
+                    <li><a href="#">O mnie</a></li>
+                    <li><a href="#">Technologie</a></li>
+                    <li><a href="#">Social media</a></li>
+                    <li><a href="#">Kontakt</a></li>
+                </ul>
+            </nav>
+        </header>
+        <section>
+            <figure>
+                <img src="#" alt="">
+            </figure>
+            <article>
+                <h1>Nagłowek główny</h1>
+                <h2>Drugi podpis jako nagłówek poboczny</h2>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis voluptates voluptate officiis iste voluptatibus earum ex blanditiis, vitae, eligendi perspiciatis odio labore nam eos libero reiciendis adipisci, delectus amet mollitia.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis voluptates voluptate officiis iste voluptatibus earum ex blanditiis, vitae, eligendi perspiciatis odio labore nam eos libero reiciendis adipisci, delectus amet mollitia.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis voluptates voluptate officiis iste voluptatibus earum ex blanditiis, vitae, eligendi perspiciatis odio labore nam eos libero reiciendis adipisci, delectus amet mollitia.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis voluptates voluptate officiis iste voluptatibus earum ex blanditiis, vitae, eligendi perspiciatis odio labore nam eos libero reiciendis adipisci, delectus amet mollitia.
+                </p>
+            </article>
+        </section>
+        <section>
+            <div class="firstBox">HTML5</div>
+            <div class="secondBox">CSS3</div>
+            <div class="thirdBox">JS</div>
+        </section>
+        <section>
+            <div class="fourthBox">Linkedin</div>
+            <div class="fifthBox">GitHub</div>
+        </section>
+        <footer>
+            <small>&copy; Copyright 2019, Maciej Mazur</small>
+            <a href="#">Email</a>
+        </footer>
+    </div>
 </body>
 </html>
