flexbox skeleton of website

--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
             <img src="#" alt="">
             <nav>
                 <ul>
-                    <li><a href="#"><Home/a></li>
+                    <li><a href="#">Home</a></li>
                     <li><a href="#">O mnie</a></li>
                     <li><a href="#">Technologie</a></li>
                     <li><a href="#">Social media</a></li>
                     <li><a href="#">Kontakt</a></li>
-                </ul>
+                 </ul>
             </nav>
         </header>
-        <section>
+        <div id="main">
             <figure>
-                <img src="#" alt="">
+                <img src="https://via.placeholder.com/150" alt="">
             </figure>
             <article>
                 <h1>Nagłowek główny</h1>
@@ -35,13 +35,13 @@
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis voluptates voluptate officiis iste voluptatibus earum ex blanditiis, vitae, eligendi perspiciatis odio labore nam eos libero reiciendis adipisci, delectus amet mollitia.
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis voluptates voluptate officiis iste voluptatibus earum ex blanditiis, vitae, eligendi perspiciatis odio labore nam eos libero reiciendis adipisci, delectus amet mollitia.
                 </p>
-            </article>
+            </div>
         </section>
-        <section>
+        <div id="aboutTechnology">
             <div class="firstBox">HTML5</div>
             <div class="secondBox">CSS3</div>
             <div class="thirdBox">JS</div>
-        </section>
+        </div>
         <section>
             <div class="fourthBox">Linkedin</div>
             <div class="fifthBox">GitHub</div>
