--- a/index.html
+++ b/index.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="pl">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Maciej Mazur - strona wizytowka</title>
-    <link rel="stylesheet" type="text/css" href="styles.css">
-    <link rel="shortcut icon" href="LINK DO FAVICON" type="image/x-icon">
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <title>Maciej Mazur - strona wizytowka</title>
+        <link rel="stylesheet" type="text/css" href="reset.css">
+        <link rel="stylesheet" type="text/css" href="frameWork.css">
+        <link rel="stylesheet" type="text/css" href="styles.css">
+        <link rel="shortcut icon" href="LINK DO FAVICON" type="image/x-icon">
+        <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+    </head>
 <body>
     <div class="mainPage">
         <header>
-            <img src="#" alt="">
             <nav>
                 <ul>
                     <li><a href="#">Home</a></li>
@@ -22,11 +24,11 @@
                  </ul>
             </nav>
         </header>
-        <div id="main">
-            <figure>
+        <div class="row aboutMe">
+            <figure class="col5">
                 <img src="https://via.placeholder.com/150" alt="">
             </figure>
-            <article>
+            <article class="col6">
                 <h1>Nagłowek główny</h1>
                 <h2>Drugi podpis jako nagłówek poboczny</h2>
                 <p>
@@ -35,18 +37,18 @@
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis voluptates voluptate officiis iste voluptatibus earum ex blanditiis, vitae, eligendi perspiciatis odio labore nam eos libero reiciendis adipisci, delectus amet mollitia.
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis voluptates voluptate officiis iste voluptatibus earum ex blanditiis, vitae, eligendi perspiciatis odio labore nam eos libero reiciendis adipisci, delectus amet mollitia.
                 </p>
-            </div>
-        </section>
-        <div id="aboutTechnology">
-            <div class="firstBox">HTML5</div>
-            <div class="secondBox">CSS3</div>
-            <div class="thirdBox">JS</div>
+            </article>
         </div>
-        <section>
-            <div class="fourthBox">Linkedin</div>
-            <div class="fifthBox">GitHub</div>
-        </section>
-        <footer>
+        <div class="row aboutTechnology">
+            <div class="firstBox col3">HTML5</div>
+            <div class="secondBox col3">CSS3</div>
+            <div class="thirdBox col3">JS</div>
+        </div>
+        <div class="row socialMedia">
+            <div class="fourthBox col4">Linkedin</div>
+            <div class="fifthBox col4">GitHub</div>
+        </div>
+        <footer class="col12">
             <small>&copy; Copyright 2019, Maciej Mazur</small>
             <a href="#">Email</a>
         </footer>
