first section on my website

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Maciej Mazur - strona wizytowka</title>
-        <link rel="stylesheet" type="text/css" href="reset.css">
-        <link rel="stylesheet" type="text/css" href="frameWork.css">
-        <link rel="stylesheet" type="text/css" href="styles.css">
+        <link rel="stylesheet" type="text/css" href="styles/reset.css">
+        <link rel="stylesheet" type="text/css" href="styles/frameWork.css">
+        <link rel="stylesheet" type="text/css" href="styles/styles.css">
         <link rel="shortcut icon" href="LINK DO FAVICON" type="image/x-icon">
-        <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     </head>
 <body>
     <div class="mainPage">
@@ -19,27 +19,29 @@
                     <li><a href="#">Home</a></li>
                     <li><a href="#">O mnie</a></li>
                     <li><a href="#">Technologie</a></li>
-                    <li><a href="#">Social media</a></li>
+                    <li><a href="#">Network</a></li>
                     <li><a href="#">Kontakt</a></li>
                  </ul>
             </nav>
         </header>
         <div class="row aboutMe">
-            <figure class="col5">
-                <img src="https://via.placeholder.com/150" alt="">
-            </figure>
-            <article class="col6">
-                <h1>Nagłowek główny</h1>
-                <h2>Drugi podpis jako nagłówek poboczny</h2>
+            <article class="col5">
+                <h1>witaj</h1>
+                <h2>na mojej stronie</h2>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis voluptates voluptate officiis iste voluptatibus earum ex blanditiis, vitae, eligendi perspiciatis odio labore nam eos libero reiciendis adipisci, delectus amet mollitia.
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis voluptates voluptate officiis iste voluptatibus earum ex blanditiis, vitae, eligendi perspiciatis odio labore nam eos libero reiciendis adipisci, delectus amet mollitia.
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis voluptates voluptate officiis iste voluptatibus earum ex blanditiis, vitae, eligendi perspiciatis odio labore nam eos libero reiciendis adipisci, delectus amet mollitia.
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis voluptates voluptate officiis iste voluptatibus earum ex blanditiis, vitae, eligendi perspiciatis odio labore nam eos libero reiciendis adipisci, delectus amet mollitia.
                 </p>
             </article>
+            <figure class="col5">
+                <img src="img/sekcja1.png" alt="">
+            </figure>
         </div>
         <div class="row aboutTechnology">
+            <div class="text">
+                <h2>pracuje</h2>
+                <h3>w technologiach</h3>
+          </div>
             <div class="firstBox col3">HTML5</div>
             <div class="secondBox col3">CSS3</div>
             <div class="thirdBox col3">JS</div>
