--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </figure>
         </div>
         <div class="row aboutTechnology">
-            <div class="text">
+            <div class="textAbotTechnology">
                 <h2>pracuje</h2>
                 <h3>w technologiach</h3>
           </div>
