new chenges on my webpage

--- a/index.html
+++ b/index.html
@@ -1,54 +1,76 @@
 <!DOCTYPE html>
 <html lang="pl">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>Maciej Mazur - strona wizytowka</title>
-        <link rel="stylesheet" type="text/css" href="styles/reset.css">
-        <link rel="stylesheet" type="text/css" href="styles/frameWork.css">
-        <link rel="stylesheet" type="text/css" href="styles/styles.css">
-        <link rel="shortcut icon" href="LINK DO FAVICON" type="image/x-icon">
-        <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-    </head>
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Maciej Mazur - strona wizytowka</title>
+    <link rel="stylesheet" type="text/css" href="styles/reset.css">
+    <link rel="stylesheet" type="text/css" href="styles/frameWork.css">
+    <link rel="stylesheet" type="text/css" href="styles/styles.css">
+    <link rel="shortcut icon" href="LINK DO FAVICON" type="image/x-icon">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+</head>
+
 <body>
     <div class="mainPage">
         <header>
             <nav>
                 <ul>
                     <li><a href="#">Home</a></li>
-                    <li><a href="#">O mnie</a></li>
                     <li><a href="#">Technologie</a></li>
                     <li><a href="#">Network</a></li>
                     <li><a href="#">Kontakt</a></li>
-                 </ul>
+                </ul>
             </nav>
         </header>
         <div class="row aboutMe">
-            <article class="col5">
+            <article class="col4">
                 <h1>witaj</h1>
                 <h2>na mojej stronie</h2>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis voluptates voluptate officiis iste voluptatibus earum ex blanditiis, vitae, eligendi perspiciatis odio labore nam eos libero reiciendis adipisci, delectus amet mollitia.
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis voluptates voluptate officiis iste voluptatibus earum ex blanditiis, vitae, eligendi perspiciatis odio labore nam eos libero reiciendis adipisci, delectus amet mollitia.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis voluptates voluptate officiis iste
+                    voluptatibus earum ex blanditiis, vitae, eligendi perspiciatis odio labore nam eos libero
+                    reiciendis adipisci, delectus amet mollitia.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis voluptates voluptate officiis iste
+                    voluptatibus earum ex blanditiis, vitae, eligendi perspiciatis odio labore nam eos libero
+                    reiciendis adipisci, delectus amet mollitia.
                 </p>
             </article>
-            <figure class="col5">
+            <figure class="col7">
                 <img src="img/sekcja1.png" alt="">
             </figure>
         </div>
-        <div class="row aboutTechnology">
-            <div class="textAbotTechnology">
-                <h2>pracuje</h2>
-                <h3>w technologiach</h3>
-          </div>
-            <div class="firstBox col3">HTML5</div>
-            <div class="secondBox col3">CSS3</div>
-            <div class="thirdBox col3">JS</div>
+        <div class="aboutTechnology">
+            <span class="margin"> </span>
+            <h2>pracuje</h2>
+            <h3>w technologiach</h3>
+            <div class="listOfTechnology">
+                <div class="firstBox col3">
+                    <img src="img/html.png">
+                    <p>html5</p>
+                </div>
+                <div class="secondBox col3">
+                    <img src="img/js.png">
+                    <p>javascript</p>
+                </div>
+                <div class="thirdBox col3">
+                    <img src="img/css.png">
+                     <p>css3</p>
+                </div>
+            </div>
         </div>
         <div class="row socialMedia">
-            <div class="fourthBox col4">Linkedin</div>
-            <div class="fifthBox col4">GitHub</div>
+            <div class="fourthBox col4">
+                <h3>odwiedź mnie</h3>
+                <h4>na</h4>
+                <button class="linkedIn"><a href="#">Linkedin</a></button>
+                <button class="gitHub"><a href="#">GitHub</a></button>
+            </div>
+            <div class="fifthBox col4">
+                <img src="img/socialmedia.png">
+            </div>
         </div>
         <footer class="col12">
             <small>&copy; Copyright 2019, Maciej Mazur</small>
@@ -56,4 +78,5 @@
         </footer>
     </div>
 </body>
+
 </html>
