new animation in file index.html, and style

--- a/index.html
+++ b/index.html
@@ -15,17 +15,19 @@
 
 <body>
     <div class="mainPage">
-        <header>
-            <nav>
-                <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Technologie</a></li>
-                    <li><a href="#">Network</a></li>
-                    <li><a href="#">Kontakt</a></li>
-                </ul>
-            </nav>
+        <header id="aboutMe">
+            <div class="fixedMenu">
+                <nav>
+                    <ul>
+                        <li><a href="#aboutMe">O mnie</a></li>
+                        <li><a href="#aboutTechnology">Technologie</a></li>
+                        <li><a href="#aboutNetwork">Network</a></li>
+                        <li><a href="#aboutContact">Kontakt</a></li>
+                    </ul>
+                </nav>
+            </div>
         </header>
-        <div class="row aboutMe">
+        <div class="row aboutMe" >
             <article class="col4">
                 <h1>witaj</h1>
                 <h2>na mojej stronie</h2>
@@ -38,13 +40,13 @@
                     reiciendis adipisci, delectus amet mollitia.
                 </p>
             </article>
-            <figure class="col7">
+            <!-- <figure class="col7">
                 <img src="img/sekcja1.png" alt="">
-            </figure>
+            </figure> -->
         </div>
-        <div class="aboutTechnology">
+        <div class="aboutTechnology" id="aboutTechnology">
             <span class="margin"> </span>
-            <h2>pracuje</h2>
+            <h2>pracuję</h2>
             <h3>w technologiach</h3>
             <div class="listOfTechnology">
                 <div class="firstBox col3">
@@ -61,7 +63,7 @@
                 </div>
             </div>
         </div>
-        <div class="row socialMedia">
+        <div class="row socialMedia" id="aboutNetwork">
             <div class="fourthBox col4">
                 <h3>odwiedź mnie</h3>
                 <h4>na</h4>
@@ -72,7 +74,7 @@
                 <img src="img/socialmedia.png">
             </div>
         </div>
-        <footer class="col12">
+        <footer class="col12" id="aboutContact">
             <small>&copy; Copyright 2019, Maciej Mazur</small>
             <a href="#">Email</a>
         </footer>
