--- a/index.html
+++ b/index.html
@@ -40,9 +40,6 @@
                     reiciendis adipisci, delectus amet mollitia.
                 </p>
             </article>
-            <!-- <figure class="col7">
-                <img src="img/sekcja1.png" alt="">
-            </figure> -->
         </div>
         <div class="aboutTechnology" id="aboutTechnology">
             <span class="margin"> </span>
@@ -75,7 +72,7 @@
             </div>
         </div>
         <footer class="col12" id="aboutContact">
-            <small>&copy; Copyright 2019, Maciej Mazur</small>
+            <p>&copy; Copyright 2019, Maciej Mazur</p>
             <a href="#">Email</a>
         </footer>
     </div>
