--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Maciej Mazur - strona wizytowka</title>
+    <title>Maciej Mazur - Junior FrontEnd Developer</title>
     <link rel="stylesheet" type="text/css" href="styles/reset.css">
     <link rel="stylesheet" type="text/css" href="styles/frameWork.css">
     <link rel="stylesheet" type="text/css" href="styles/styles.css">
@@ -28,21 +28,18 @@
             </div>
         </header>
         <div class="row aboutMe" >
-            <article class="col4">
-                <h1>witaj</h1>
-                <h2>na mojej stronie</h2>
+            <article class="col5">
+                <h1>Maciej Mazur</h1>
+                <h2>Junior FrontEnd Developer</h2>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis voluptates voluptate officiis iste
-                    voluptatibus earum ex blanditiis, vitae, eligendi perspiciatis odio labore nam eos libero
-                    reiciendis adipisci, delectus amet mollitia.
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis voluptates voluptate officiis iste
-                    voluptatibus earum ex blanditiis, vitae, eligendi perspiciatis odio labore nam eos libero
-                    reiciendis adipisci, delectus amet mollitia.
+                    Od 2010 roku zajmuje się marketingiem internetowym. Przez ten czas budowałem zespoły, które realizowały kampanie dla marek których produkty otoczają nas każdego dnia. Wieloletnie doświadczenia przekonały mnie że technologie internetowe dają możliwość kreacji dowolnego pomysłu. 
+                </p>
+                <p class="secondP">
+                    Szukając dalszej drogi rozwoju zdecydowałem się na webdevelopment. Zapraszam na stronę, gdzie będę zamieszczał swoje portfolio.
                 </p>
             </article>
         </div>
         <div class="aboutTechnology" id="aboutTechnology">
-            <span class="margin"> </span>
             <h2>pracuję</h2>
             <h3>w technologiach</h3>
             <div class="listOfTechnology">
@@ -62,8 +59,8 @@
         </div>
         <div class="row socialMedia" id="aboutNetwork">
             <div class="fourthBox col4">
-                <h3>zajrzyj w sieci</h3>
-                <h4>do mnie <span>na :</span></h4>
+                <h3>więcej informacji</h3>
+                <h4>o mnie <span>na :</span></h4>
                 <a class="linkedIn button" href="https://www.linkedin.com/in/maciej-mazur-3749baa0/" target="blank">Linkedin</a>
                 <a class="gitHub button" href="https://github.com/mazurmaciej" target="blank">GitHub</a>
             </div>
